--- a/chrome-extension/popup.html
+++ b/chrome-extension/popup.html
@@ -1,36 +1,57 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Firefeed News</title>
   <link rel="stylesheet" href="popup.css">
 </head>
-<body> <!-- Стили скругления применяем непосредственно к body -->
+<body>
   <div class="header">
-    <h1>Firefeed News</h1>
+    <h1 id="header-title">Firefeed News</h1>
     <div class="filters">
-      <label for="language-select">Язык:</label>
+      <label for="language-select" id="language-label">Language:</label>
       <select id="language-select">
         <option value="ru">Русский</option>
         <option value="en">English</option>
         <option value="de">Deutsch</option>
         <option value="fr">Français</option>
       </select>
-
-      <label for="category-select">Категория:</label>
+      <label for="source-select" id="source-label">Source:</label>
+      <select id="source-select">
+        <option value="">All sources</option>
+        <!-- Options will be populated dynamically by JS -->
+      </select>
+      <label for="category-select" id="category-label">Category:</label>
       <select id="category-select">
-        <option value="">Все категории</option>
-        <!-- Опции будут заполнены динамически JS -->
+        <option value="">All categories</option>
+        <!-- Options will be populated dynamically by JS -->
       </select>
     </div>
   </div>
 
-  <div class="loading" id="loading">Загрузка новостей...</div>
+  <div class="pagination-controls">
+    <div>
+      <label for="limit-select" id="limit-label">Navigation:</label>
+      <select id="limit-select">
+        <option value="10">10</option>
+        <option value="50" selected>50</option>
+        <option value="100">100</option>
+      </select>
+      <button id="prev-page" class="pagination-btn" disabled>Previous</button>
+      <button id="next-page" class="pagination-btn" disabled>Next</button>
+    </div>
+    <div>
+      <input type="checkbox" id="auto-update-checkbox">
+      <label for="auto-update-checkbox" id="auto-update-label">Auto-update</label>
+    </div>
+  </div>
+
+  <div class="loading" id="loading">Loading news...</div>
   <div class="error" id="error" style="display: none;"></div>
 
   <div class="news-container" id="news-container">
-    <!-- Новости будут вставлены сюда JS -->
+    <!-- News will be inserted here by JS -->
   </div>
 
   <script src="popup.js"></script>
